--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -7,9 +7,9 @@ ajout:
     controller: App\Controller\AjoutClientController::index
 
 modif:
-    path: /modif
+    path: /modif/{id}
     controller: App\Controller\AjoutClientController::modifClient
 
-liste:
+liste_clients:
     path: /liste
     controller: App\Controller\AjoutClientController:listeClients
